--- a/css/main.css
+++ b/css/main.css
@@ -278,6 +278,22 @@ body.before-load {
 	font-size: 0.8rem;
 	color: #888;
 }
+
+.padlet-embed{
+	margin: 0 auto;
+	width:100%;
+	-webkit-transform: scale(0.88) translateY(4rem);
+	-moz-transform: scale(0.88) translateY(4rem);
+	-ms-transform: scale(0.88) translateY(4rem);
+	transform: scale(0.88) translateY(4rem);
+	-webkit-transform-origin: bottom ;
+	-moz-transform-origin: bottom ;
+	transform-origin: bottom ; 
+}
+.padlet-embed iframe {
+	height:508px;
+}
+
 #scroll-section-4 p {
 	text-align: center;
 	margin: 0 auto;
@@ -402,6 +418,25 @@ footer .copyright a{
 		max-width: 800px;
 		padding: 20px 0 0;
 		font-size: 0.9em;
+	}
+	.padlet-embed{
+		margin: 0 auto;
+		width:70%;
+		-webkit-transform: scale(0.88);
+		-moz-transform: scale(0.88);
+		-ms-transform: scale(0.88);
+		transform: scale(0.88);
+		/* width:100%;
+		-webkit-transform: scale(1);
+		-moz-transform: scale(1);
+		-ms-transform: scale(1);
+		transform: scale(1); */
+		-webkit-transform-origin: bottom;
+		-moz-transform-origin: bottom;
+		transform-origin: bottom; 
+	}
+	.padlet-embed iframe {
+		height:708px;
 	}
 
 	#scroll-section-4 p {
