--- a/css/about.css
+++ b/css/about.css
@@ -29,8 +29,8 @@ body.before-load {
 /* 위에는 별개의 파일로 정리해야 될텐데....*/
 
 :root {
-  --global-nav-height: 0px;
-  --local-nav-height: 52px;
+  --top-nav-height: 0px;
+  --global-nav-height: 52px;
 }
 
 .history,
@@ -103,6 +103,7 @@ h4 {
   height: 0;
   padding-bottom: 56%;
 }
+
 iframe {
   position: absolute;
   left: 0;
@@ -110,7 +111,6 @@ iframe {
   width: 100%;
   height: 100%;
 }
-
 .insta-container {
   max-width: 500px;
   padding-bottom: 35rem;
